force-app/main/default/objects/Learner__c/Learner__c.object-meta.xml
<CustomObject>
    <label>Learner</label>
    <nameField>
        <displayFormat>LID-{0000}</displayFormat>
        <label>Learner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>