force-app/main/default/objects/Learner__c/fields/Duration_of_Class__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Class__c</fullName>
    <label>Duration of Class</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>