force-app/main/default/objects/Learner__c/fields/Learner_Name__c.field-meta.xml
<CustomField>
    <fullName>Learner_Name__c</fullName>
    <label>Learner Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>