force-app/main/default/objects/Learner__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <formula>TEXT(Trainer_Name_for_Student__r.Subject__c)</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>