force-app/main/default/objects/Learner__c/fields/Trainer_Name_for_Student__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name_for_Student__c</fullName>
    <label>Trainer Name for Student</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Learners List</relationshipLabel>
    <relationshipName>Learners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>